--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script>
-  $.get('clicky_test.svg', function(data) {
+  $.get('![](tests/clicky_test.svg)', function(data) {
     $(document.body).append(data.documentElement);
     init();
   });
