--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[test](https://github.com/free-the-data/tests/blob/gh-pages/click_test.zip)
+[test](https://github.com/free-the-data/tests/raw/master/test.html)
