--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[test](https://github.com/free-the-data/tests/raw/gh-pages/test.html)
+<a href="https://github.com/free-the-data/tests/raw/gh-pages/test.html">test</a>
