--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script>
-  $.get('![](tests/clicky_test.svg)', function(data) {
+  $.get('https://github.com/free-the-data/tests/raw/gh-pages/clicky_test.svg&sanitize=true)', function(data) {
     $(document.body).append(data.documentElement);
     init();
   });
