--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/free-the-data/tests/raw/gh-pages/test.html">test</a>
+<a href="https://free-the-data.github.io/tests/test.html">test</a>
