--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://free-the-data.github.io/tests/test.html">test</a>
+<a href="https://free-the-data.github.io/tests/Untitled-6.html">test</a>
