--- a/Untitled-6.html
+++ b/Untitled-6.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script>
-  jQuery.get('./clicky_test.svg', function(data) {
+  jQuery.get('https://rawcdn.githack.com/free-the-data/tests/feaa4abc0b89861ec252d54ca2f563ff4d0eaa0c/clicky_test.svg', function(data) {
     $(document.body).append(data.documentElement);
     init();
   });
