--- a/gs.html
+++ b/gs.html
@@ -9,6 +9,8 @@
 <body>
 
   <svg enable-background="new 0 0 1366 768" version="1.1" viewBox="0 0 1366 768" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    width="100%" 
+    height="100%"
   <style type="text/css">
   	.st0{fill:#FF4848;}
   	.st1{fill:#730211;}
@@ -89,19 +91,4 @@ const floatAnimation = () => {
 
 </body>
 </html>
-<style>
-.issuu-embed-container {
- position: relative;
- padding-bottom: 56.25%; /* set the aspecat ratio here as (height / width) * 100% */
- height: 0;
- overflow: hidden;
- max-width: 100%;
-}
-.issuu-embed-container iframe {
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
-}
-</style>
+
