--- a/gs.html
+++ b/gs.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  
+<style>
+  body
+{
+    border: 0px;
+    padding: 0px;
+    overflow: hidden;
+    margin: 0px;
+}
+  </style>
+  
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
@@ -88,7 +99,9 @@ const floatAnimation = () => {
 
 
 </script>
+  
 
 </body>
+
 </html>
 
