--- a/gs.html
+++ b/gs.html
@@ -2,14 +2,20 @@
 <html>
   
 <style>
-  body
+html
 {
     border: 0px;
-    padding: 0px;
-    overflow: hidden;
     margin: 0px;
+    overflow: hidden;
+    padding: 0px;
 }
-  </style>
+body
+{
+    border: 0px;
+    margin: 0px;
+    overflow: hidden;
+    padding: 0px;
+}  </style>
   
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
