--- a/gs.html
+++ b/gs.html
@@ -6,14 +6,14 @@ html
 {
     border: 0px;
     margin: 0px;
-    overflow: hidden;
+    overflow: visible;
     padding: 0px;
 }
 body
 {
     border: 0px;
     margin: 0px;
-    overflow: hidden;
+    overflow: visible;
     padding: 0px;
 }  </style>
   
