--- a/gs.html
+++ b/gs.html
@@ -2,20 +2,9 @@
 <html>
   
 <style>
-html
-{
-    border: 0px;
-    margin: 0px;
-    overflow: visible;
-    padding: 0px;
-}
-body
-{
-    border: 0px;
-    margin: 0px;
-    overflow: visible;
-    padding: 0px;
-}  </style>
+html, body { margin:0; padding:0 }
+embed { width: 100%; height: 100% }
+</style>
   
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
