--- a/gs.html
+++ b/gs.html
@@ -10,7 +10,8 @@ html, body { margin:0; padding:0 }
 embed { width: 100%; height: 100% }
 </style>
 <body>
-  <svg enable-background="xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<div>
+  <svg version="1.1" viewBox="10 10 1366 768" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <style type="text/css">
   	.st0{fill:#FF4848;}
   	.st1{fill:#730211;}
@@ -34,6 +35,7 @@ embed { width: 100%; height: 100% }
   	<circle id = "blue3" class="st2" cx="1068.3" cy="138.5" r="90.2"/>
 
   </svg>
+</div>
 <script>
 const floatAnimation = () => {
          const tlCan = new TimelineMax({repeat:-1});
