--- a/gs.html
+++ b/gs.html
@@ -11,7 +11,7 @@ embed { width: 100%; height: 100% }
 </style>
 <body>
 <div>
-  <svg version="1.1" viewBox="1500 900 1366 768" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg version="1.1" style="overflow: visible" viewBox="10 10 1366 768" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <style type="text/css">
   	.st0{fill:#FF4848;}
   	.st1{fill:#730211;}
