--- a/gs.html
+++ b/gs.html
@@ -5,13 +5,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TimelineMax.min.js"></script>
 </head>
-<style>
-html, body { margin:0; padding:0 }
-embed { width: 100%; height: 100% }
-</style>
+
 <body>
 <div>
-  <svg version="1.1" style="overflow: visible" viewBox="10 10 1366 768" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg version="1.1" viewBox="10 10 1366 768" svg width="100%" height="100%"  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <style type="text/css">
   	.st0{fill:#FF4848;}
   	.st1{fill:#730211;}
